@@ -1,6 +1,8 @@
 Wed Aug 31, 2005 Linas Vepstas <linas@linas.org>
 	* Apply sourceforge patch 1176719 Extensible fix for gtkhtml3 building
 	  128490: gnotime-gtkhtml.patch  2005-04-04 17:47  abadger1999
+	* Apply sourceforge patch 1038701 Fix to Activity item in popup menu
+	  103506: gnotime-popup-menus.patch  2004-10-01 13:37  abadger1999
 	* Apply sourceforge patch 1027582 Build system update for qof inclusion.
 	  101401: gnotime-static-qof.patch  2004-09-13 15:45  abadger1999
 
